--- a/Manuscript/Manuscript.tex
+++ b/Manuscript/Manuscript.tex
@@ -112,7 +112,7 @@ We therefore implement variable bedrock Ca+Mg concentration into GEOCLIM (\SI). 
 
 \subsection*{Calibration}
 
-The values of four parameters within the silicate weathering component that modify the dependence of silicate weathering on temperature, runoff, erosion, and regolith thickness are poorly constrained. Rather than prescribing single values, we test several reasonable values for each of these four parameters along with the Ca+Mg concentration of metamorphic and siliciclastic lithologies (\SI; Table S2). We then permute all possible combinations of these reasonable values for the six parameters, leading to 93,600 unique parameter combinations (i.e. permutations). For each combination, we compute spatially resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 573 parameter combinations remain (\SI; Fig. S3). The resulting global \COtwo consumption of these filtered model runs all overlap with independently derived estimates of the global \COtwo degassing flux \cite{Gerlach2011a}, as they should given that the long-term carbon cycle is in steady state (\SI; Fig. S3).
+The values of four parameters within the silicate weathering component that modify the dependence of silicate weathering on temperature, runoff, erosion, and regolith thickness are poorly constrained. Rather than prescribing single values, we select multiple values for each of these four parameters along with the Ca+Mg concentration of metamorphic and siliciclastic lithologies from within reasonable ranges (\SI; Table S2). We then permute all possible combinations of these values for the six parameters, leading to 93,600 unique parameter combinations (i.e. permutations). For each combination, we compute spatially resolved long-term \COtwo consumption associated with Ca+Mg fluxes using present-day runoff, temperature, and slope. We sum computed \COtwo consumption over watersheds for which data-constrained estimates are available \cite{Gaillardet1999a, Moquet2018a}, then calculate the coefficient of determination ($r^{2}$) between computed and measured \COtwo consumption in each of these watersheds. After eliminating parameter combinations that result in low $r^{2}$, 573 parameter combinations remain (\SI; Fig. S3). The resulting global \COtwo consumption of these filtered model runs all overlap with independently derived estimates of the global \COtwo degassing flux \cite{Gerlach2011a}, as they should given that the long-term carbon cycle is in steady state (\SI; Fig. S3).
 
 \subsection*{Climate Model Component}
 
@@ -140,7 +140,7 @@ We use GEOCLIM to estimate \pCOtwo associated with the reconstructed subaerial e
 
 \section*{\pCOtwo Estimates}
 
-Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm. These ``paleo-SEAI'' scenarios do not account for Neogene changes outside of the SEAI (e.g. changes in ocean/atmosphere circulation, volcanic degassing, and weathering fluxes elsewhere on Earth, discussed in \textit{Alternative Mechanisms for Neogene Cooling}). Therefore, these results are not estimating \pCOtwo at 15~Ma, but rather are quantifying \pCOtwo change associated with emergence of the SEAI alone.
+Using the 573 unique parameter combinations, the ``paleo-SEAI'' scenarios resulted in 526--678~ppm for 15~Ma, 457--516~ppm for 10~Ma, and 391--434~ppm \pCOtwo for 5~Ma (Fig. \ref{fig:scenario_pCO2}). These results indicate a progressive decrease in \pCOtwo over the Neogene associated with the emergence of the SEAI, and suggest that without this emergence, pre-industrial \pCOtwo would have been $\sim$526--678~ppm. These ``paleo-SEAI'' scenarios do not account for Neogene changes outside of the SEAI (e.g. changes in ocean/atmosphere circulation, volcanic degassing, and weathering fluxes elsewhere on Earth, discussed in \textit{Alternative Mechanisms for Neogene Cooling}). Therefore, these results are not estimating \pCOtwo at 15~Ma, but rather are quantifying \pCOtwo change associated with emergence of the SEAI.
 
 Proxy-based estimates of the magnitude and trajectory of \pCOtwo change from the Miocene to the Pliocene are variable between techniques and associated assumptions underlying their interpretation (\SI; Fig. S11). The \pCOtwo values from the 5~Ma ``paleo-SEAI'' scenario overlap with many proxy-based estimates \cite{Foster2017a} as well as values that emerge from approaches that assimilate climate and ice sheet model output with benthic \dO data \cite{van-de-Wal2011a, Berends2020a}. The modeled \pCOtwo values for 15~Ma resemble the higher end of proxy-based \pCOtwo estimates for the early to mid-Miocene, indicating that the increase in subaerially exposed land area and tectonic topography of the SEAI is sufficient to explain long-term cooling of Earth's climate over the Neogene. The \pCOtwo threshold for Antarctic glaciation is estimated to be $\sim$750~ppm with that for Northern Hemisphere glaciation being significantly lower at $\sim$280~ppm \cite{DeConto2008a}. These modeled values of decreasing \pCOtwo associated with emergence of the SEAI are therefore consistent with the record of Neogene climate with Miocene ice sheets on Antarctica \cite{Sugden1995a} followed by Northern Hemisphere ice sheets developing in the Pliocene \cite{Haug2005a} as \pCOtwo subsequently decreased.
 
@@ -173,7 +173,7 @@ However, changes in the volcanic degassing flux would have modulated changes in 
 
 \subsection*{Himalayan Uplift}
 
-Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a, Edmond1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the globally averaged ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically unique lithologies. For example, unusually radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a direct proxy for silicate weathering fluxes. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision. Increasing seawater Mg/Ca since ca. 15~Ma \cite{Higgins2012a} is consistent with an increasing proportion of the global silicate weathering flux being derived from mafic and ultramafic sources.
+Marine \SrSr has overall been increasing since ca. 35~Ma \cite{McArthur2012a}. The traditional explanation for this trend is that it reflects increased weathering of radiogenic (i.e. high \SrSr) silicate rocks \cite{Raymo1988a, Edmond1992a}. Associated with this explanation is the proposal that increasing weathering of radiogenic silicate rocks in the Himalayas was the primary driver of Neogene cooling \cite{Raymo1992a}. It could be argued that increasing marine \SrSr is inconsistent with the hypothesis that increasing weathering of juvenile (i.e. low \SrSr) silicate rocks in the SEAI was an important driver of Neogene cooling. However, the globally averaged ratio of silicate weathering fluxes from radiogenic cratonic rocks versus juvenile arc lithologies can be at least partially decoupled from marine \SrSr via the regional weathering of isotopically unique lithologies. For example, in addition to highly radiogenic granites and gneisses \cite{Edmond1992a}, unusually radiogenic carbonates are abundant in Himalayan strata, and it is estimated that $\sim$75\% of Sr coming from the Himalayas can be attributed to carbonate rather than silicate weathering \cite{Jacobson2002a, Quade2003a, Oliver2003a}. As such, there are challenges in interpreting the marine \SrSr record as a direct proxy for silicate weathering fluxes. Nevertheless, steadily increasing marine \SrSr is interrupted ca. 16~Ma when the slope of the \SrSr curve decreases \cite{McArthur2012a}. This decrease in slope has been attributed to coincident exhumation of relatively low \SrSr Outer Lesser Himalaya carbonates \cite{Myrow2015a, Colleps2018a}, but could also be at least partially driven by the emergence of low \SrSr lithologies in the SEAI during arc-continent collision. Increasing seawater Mg/Ca since ca. 15~Ma \cite{Higgins2012a} is consistent with an increasing proportion of the global silicate weathering flux being derived from mafic and ultramafic sources.
 
 Himalayan uplift would have affected geological carbon sinks, either via increased weathering of silicate rocks \cite{Raymo1992a} or enhanced burial of organic matter in the Bengal Fan \cite{Galy2007a}. Increased weathering of the emerging SEAI would have occurred in tandem with such changes in the Himalaya, such that the effects of these paleogeographic changes on geochemical proxy records, like marine \SrSr, become difficult to disentangle. In addition, given the large uncertainty associated with changes in regional climatology across Asia due to Himalayan orogeny, developing quantitative estimates of the evolution of global silicate weathering fluxes associated with Himalayan orogeny remains a major challenge.
 
@@ -181,7 +181,7 @@ Himalayan uplift would have affected geological carbon sinks, either via increas
 
 If geological carbon sources remain approximately constant, global alkalinity delivery from silicate weathering needs to be approximately constant as well to keep the long-term carbon cycle in steady-state \cite{Kump1997a}. Enhanced silicate weathering in a region such as the SEAI is compensated by a decrease in silicate weathering elsewhere. Global alkalinity delivery from silicate weathering does not change, but occurs more efficiently and thereby at lower \pCOtwo. Given that carbonate weathering is disconnected from the long-term carbon-cycle mass balance, changes in carbonate accumulation through time \cite{Si2019a} could be driven by changes in carbonate weathering.
 
-The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter enabled by higher sediment and nutrient delivery could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering rates. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with evolving silicate weathering rates driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
+The long-term carbon-cycle mass balance can be perturbed via mechanisms that are disconnected from changes in volcanic degassing and silicate weathering rates. For example, sulphide oxidation coupled to carbonate dissolution could act as a source of \COtwo on million year time-scales \cite{Torres2014a}. Similarly, the weathering of sedimentary organic matter could serve as a source of \COtwo \cite{Hilton2014a}. On the other hand, enhanced burial of organic matter enabled by higher sediment and nutrient delivery could be an important sink of \COtwo, as has been suggested in the Bengal Fan \cite{Galy2007a} and Taiwan \cite{Kao2014a}. The fluxes of \COtwo represented by these processes are not accounted for in our model framework, and could have been affected by emergence of the SEAI and/or Himalayan orogeny. \pCOtwo changes that result from these processes would be superimposed on \pCOtwo changes associated with evolving silicate weathering fluxes. However, our coupled weathering-climate model indicates that the \pCOtwo change associated with increased global weatherability driven by emergence of the SEAI is sufficient to explain the majority of Neogene cooling (Fig. \ref{fig:scenario_pCO2}). Without this emergence, \pCOtwo would have remained above the level necessary for the growth of Northern Hemisphere ice sheets.
 
 \section*{Conclusions}
 
